--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -1,7 +1,7 @@
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse">
     <div class="text-center lg:text-left">
-      <h1 class="text-5xl font-bold">Login now!</h1>
+      <h1 class="text-5xl font-bold">Connectez-vous !</h1>
       <p class="py-6">
         Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
         excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a
@@ -10,30 +10,35 @@
     </div>
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
       <div class="card-body">
-        <div class="form-control">
-          <label class="label">
-            <span class="label-text">Email</span>
-          </label>
-          <input type="text" placeholder="email" class="input input-bordered" />
-        </div>
-        <div class="form-control">
-          <label class="label">
-            <span class="label-text">Password</span>
-          </label>
-          <input
-            type="text"
-            placeholder="password"
-            class="input input-bordered"
-          />
-          <label class="label">
-            <a href="#" class="label-text-alt link link-hover"
-              >Forgot password?</a
-            >
-          </label>
-        </div>
-        <div class="form-control mt-6">
-          <button class="btn btn-primary">Login</button>
-        </div>
+        <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Pseudo</span>
+            </label>
+            <input type="text" formControlName="pseudo" placeholder="pseudo" class="input input-bordered" />
+            <div *ngIf="loginForm.get('pseudo')?.invalid && (loginForm.get('pseudo')?.dirty || loginForm.get('pseudo')?.touched)" class="text-error">Pseudo est requis et doit avoir entre 3 et 20 caractères.</div>
+          </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Mot de passe</span>
+            </label>
+            <input
+              type="password"
+              formControlName="password"
+              placeholder="monMdp"
+              class="input input-bordered"
+            />
+            <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)" class="text-error">Mot de passe est requis et doit avoir entre 4 et 30 caractères.</div>
+            <label class="label">
+              <a href="#" class="label-text-alt link link-hover"
+              >Mot de passe oublié?</a
+              >
+            </label>
+          </div>
+          <div class="form-control mt-6">
+            <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
