--- a/src/app/components/register-card/register-card.component.html
+++ b/src/app/components/register-card/register-card.component.html
@@ -1,44 +1,40 @@
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse">
     <div class="text-center lg:text-left">
-      <h1 class="text-5xl font-bold">Register now!</h1>
+      <h1 class="text-5xl font-bold">Inscrivez-vous !</h1>
       <p class="py-6">
         Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-        excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a
-        id nisi.
+        excepturi exercitationem quasi.
       </p>
     </div>
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
       <div class="card-body">
-        <div class="form-control">
-          <label class="label">
-            <span class="label-text">Pseudo</span>
-          </label>
-          <input
-            type="text"
-            placeholder="pseudo"
-            class="input input-bordered"
-          />
-        </div>
-        <div class="form-control">
-          <label class="label">
-            <span class="label-text">Email</span>
-          </label>
-          <input type="text" placeholder="email" class="input input-bordered" />
-        </div>
-        <div class="form-control">
-          <label class="label">
-            <span class="label-text">Password</span>
-          </label>
-          <input
-            type="text"
-            placeholder="password"
-            class="input input-bordered"
-          />
-        </div>
-        <div class="form-control mt-6">
-          <button class="btn btn-primary">Register</button>
-        </div>
+        <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Pseudo</span>
+            </label>
+            <input type="text" formControlName="pseudo" placeholder="Saisir un pseudo" class="input input-bordered" />
+            <div *ngIf="registrationForm?.get('pseudo')?.invalid && (registrationForm?.get('pseudo')?.dirty || registrationForm?.get('pseudo')?.touched)" class="text-error">Pseudo est requis et doit avoir entre 3 et 20 caractères.</div>
+          </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Mot de passe</span>
+            </label>
+            <input type="password" formControlName="password" placeholder="Saisir un mot de passe" class="input input-bordered" />
+            <div *ngIf="registrationForm?.get('password')?.invalid && (registrationForm?.get('password')?.dirty || registrationForm?.get('password')?.touched)" class="text-error">Mot de passe est requis et doit avoir entre 4 et 30 caractères.</div>
+          </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Email</span>
+            </label>
+            <input type="email" formControlName="email" placeholder="email@example.com" class="input input-bordered" />
+            <div *ngIf="registrationForm?.get('email')?.invalid && (registrationForm?.get('email')?.dirty || registrationForm?.get('email')?.touched)" class="text-error">Veuillez entrer une adresse email valide.</div>
+          </div>
+          <div class="form-control mt-6">
+            <button type="submit" class="btn btn-primary">S'inscrire</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
