--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -28,9 +28,7 @@
             />
             <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)" class="text-error">Mot de passe est requis et doit avoir entre 4 et 30 caractères.</div>
             <label class="label">
-              <a href="#" class="label-text-alt link link-hover"
-              >Mot de passe oublié?</a
-              >
+              <a href="#" class="label-text-alt link link-hover">Mot de passe oublié?</a>
             </label>
           </div>
           <div class="form-control mt-6">
