--- a/src/app/components/register-card/register-card.component.html
+++ b/src/app/components/register-card/register-card.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
       <div class="card-body">
-        <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+        <form *ngIf="registrationForm" [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
           <div class="form-control">
             <label class="label">
               <span class="label-text">Pseudo</span>
@@ -32,7 +32,7 @@
             <div *ngIf="registrationForm?.get('email')?.invalid && (registrationForm?.get('email')?.dirty || registrationForm?.get('email')?.touched)" class="text-error">Veuillez entrer une adresse email valide.</div>
           </div>
           <div class="form-control mt-6">
-            <button type="submit" class="btn btn-primary">S'inscrire</button>
+            <button type="submit" [disabled]="registrationForm.invalid" class="btn btn-primary">S'inscrire</button>
           </div>
         </form>
       </div>
