--- a/src/app/components/register-card/register-card.component.html
+++ b/src/app/components/register-card/register-card.component.html
@@ -1,12 +1,20 @@
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse">
-    <div class="text-center lg:text-left">
-      <h1 class="text-5xl font-bold">Inscrivez-vous !</h1>
-      <p class="py-6">
-        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-        excepturi exercitationem quasi.
-      </p>
-    </div>
+    <ng-container *ngIf="successMessage; else registrationSection">
+      <div class="text-center lg:text-left">
+        <h1 class="text-5xl font-bold">{{ successMessage }}</h1>
+      </div>
+    </ng-container>
+
+    <ng-template #registrationSection>
+      <div class="text-center lg:text-left">
+        <h1 class="text-5xl font-bold">Inscrivez-vous !</h1>
+        <p class="py-6">
+          Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi.
+        </p>
+      </div>
+    </ng-template>
+
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
       <div class="card-body">
         <form *ngIf="registrationForm" [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
@@ -34,7 +42,11 @@
           <div class="form-control mt-6">
             <button type="submit" [disabled]="registrationForm.invalid" class="btn btn-primary">S'inscrire</button>
           </div>
+          <div *ngIf="loadingSpinner || successMessage" class="spinner-container">
+            <app-spinner></app-spinner>
+          </div>
         </form>
+        <div *ngIf="errorMessage" class="mt-4 text-center text-error">{{ errorMessage }}</div>
       </div>
     </div>
   </div>
