--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100">
+<div class="navbar bg-base-100 fixed w-full z-10">
   <div class="navbar-start">
     <div class="dropdown">
       <label tabindex="0" class="btn btn-ghost btn-circle">
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="navbar-center">
-    <a class="btn btn-ghost normal-case text-xl">GimmiGame</a>
+    <a href="/welcome" class="btn btn-ghost normal-case text-xl">GimmiGame</a>
   </div>
   <div class="navbar-end">
     <button class="btn btn-ghost btn-circle">
