--- a/src/app/components/register-card/register-card.component.html
+++ b/src/app/components/register-card/register-card.component.html
@@ -47,6 +47,10 @@
           </div>
         </form>
         <div *ngIf="errorMessage" class="mt-4 text-center text-error">{{ errorMessage }}</div>
+        <div class="mt-4 text-center">
+          <p>Déjà un compte ?</p>
+          <a href="/login" class="text-primary">Se connecter</a>
+        </div>
       </div>
     </div>
   </div>
