--- a/src/app/pages/landpage/landpage.component.html
+++ b/src/app/pages/landpage/landpage.component.html
@@ -1,14 +1,13 @@
-<app-header></app-header>
-
 <!-- First component -->
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row items-center justify-center">
     <img src="assets/images/GimmiGame_Logo.png" class="max-w-sm rounded-lg shadow-2xl" />
     <div class="ml-6">
-      <h1 class="text-5xl font-bold">Welcome to your game room!</h1>
+      <h1 class="text-5xl font-bold">Bienvenue dans votre game room!</h1>
       <p class="py-6">
-        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi.
-        In deleniti eaque aut repudiandae et a id nisi.
+        GimmiGame est une application qui vous permet de jouer à des jeux de société en ligne avec vos amis.
+        <br>
+        Découvrez de nouveaux jeux, créez des parties et atteignez les plus hauts rangs du classement !
       </p>
       <div class="flex gap-4">
         <a routerLink="/login" class="btn btn-primary">Se connecter</a>
