--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<!--<div data-theme="light">--> <!--Put the theme in light-->
+
+<div [attr.data-theme]="theme">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</div>
 
