--- a/src/app/components/register-card/register-card.component.html
+++ b/src/app/components/register-card/register-card.component.html
@@ -11,7 +11,7 @@
       <div class="text-center lg:text-left">
         <h1 class="text-5xl font-bold">Inscrivez-vous !</h1>
         <p class="py-6">
-          Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi.
+          Créez votre compte pour pouvoir accéder à toutes les fonctionnalités de l'application.
         </p>
       </div>
     </ng-template>
