--- a/src/app/components/friend-request-management/friend-request-management.component.html
+++ b/src/app/components/friend-request-management/friend-request-management.component.html
@@ -17,41 +17,42 @@
     <div class="p-6 bg-base-100 flex-1">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
         <!-- Section "Invitations reçues" -->
-        <div class="border rounded p-4">
-          <h3 class="text-lg font-bold ">Invitations reçues</h3>
-          <div class="mt-4">
-            <!-- Liste des invitations reçues -->
-            <ul>
-              <li class="py-2">
-                <div class="flex justify-between items-center">
-                  <span>Invitation 1</span>
-                  <div>
-                    <button class="btn btn-primary mr-2">Accepter</button>
-                    <button class="btn ">Refuser</button>
-                  </div>
-                </div>
-              </li>
-              <li class="py-2">
-                <div class="flex justify-between items-center">
-                  <span>Invitation 2</span>
-                  <div>
-                    <button class="btn btn-primary mr-2">Accepter</button>
-                    <button class="btn ">Refuser</button>
-                  </div>
-                </div>
-              </li>
-              <li class="py-2">
-                <div class="flex justify-between items-center">
-                  <span>Invitation 3</span>
-                  <div>
-                    <button class="btn btn-primary mr-2">Accepter</button>
-                    <button class="btn ">Refuser</button>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
+<!--        <div class="border rounded p-4">-->
+<!--          <h3 class="text-lg font-bold ">Invitations reçues</h3>-->
+<!--          <div class="mt-4">-->
+<!--            &lt;!&ndash; Liste des invitations reçues &ndash;&gt;-->
+<!--            <ul>-->
+<!--              <li class="py-2">-->
+<!--                <div class="flex justify-between items-center">-->
+<!--                  <span>Invitation 1</span>-->
+<!--                  <div>-->
+<!--                    <button class="btn btn-primary mr-2">Accepter</button>-->
+<!--                    <button class="btn ">Refuser</button>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </li>-->
+<!--              <li class="py-2">-->
+<!--                <div class="flex justify-between items-center">-->
+<!--                  <span>Invitation 2</span>-->
+<!--                  <div>-->
+<!--                    <button class="btn btn-primary mr-2">Accepter</button>-->
+<!--                    <button class="btn ">Refuser</button>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </li>-->
+<!--              <li class="py-2">-->
+<!--                <div class="flex justify-between items-center">-->
+<!--                  <span>Invitation 3</span>-->
+<!--                  <div>-->
+<!--                    <button class="btn btn-primary mr-2">Accepter</button>-->
+<!--                    <button class="btn ">Refuser</button>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </li>-->
+<!--            </ul>-->
+<!--          </div>-->
+<!--        </div>-->
+        <app-friend-request-received [owner]="owner"></app-friend-request-received>
 
         <!-- Section "Invitations envoyées" -->
         <div class="border border-primary rounded p-4">
