--- a/src/app/components/friend-request-sent/friend-request-sent.component.html
+++ b/src/app/components/friend-request-sent/friend-request-sent.component.html
@@ -1,8 +1,8 @@
-<div class="border rounded p-4">
-  <h3 class="text-lg font-bold">Invitations reçues</h3>
-  <div class="mt-4" *ngIf="friendRequestsReceived">
+<div class="border border-primary rounded p-4">
+  <h3 class="text-lg font-bold">Invitations envoyées</h3>
+  <div class="mt-4" *ngIf="friendRequestsSent">
     <ul>
-      <li class="py-2" *ngFor="let request of friendRequestsReceived">
+      <li class="py-2" *ngFor="let request of friendRequestsSent">
         <div class="flex justify-between items-center">
           <div class="flex items-center space-x-3">
             <div class="avatar">
@@ -11,13 +11,12 @@
               </div>
             </div>
             <div>
-              <div class="font-bold">{{ request.from.pseudo }}</div>
+              <div class="font-bold">{{ request.to.pseudo }}</div>
               <div class="text-sm opacity-50">France</div>
             </div>
           </div>
           <div>
-            <button class="btn mr-2" (click)="acceptInvitation(request._id)">Accepter</button>
-            <button class="btn btn-primary" (click)="rejectInvitation(request._id)">Refuser</button>
+            <button class="btn btn-primary mr-2" (click)="cancelInvitation(request._id)">Annuler</button>
           </div>
         </div>
       </li>
@@ -26,7 +25,7 @@
       <app-spinner></app-spinner>
     </div>
   </div>
-  <div *ngIf=" !friendRequestsReceived || friendRequestsReceived.length === 0 ">
+  <div *ngIf=" !friendRequestsSent || friendRequestsSent.length === 0 ">
     <p class="text-center">Aucune invitation recue</p>
   </div>
 
@@ -38,5 +37,3 @@
     <app-alert type="error" message="{{errorMessage}}"></app-alert>
   </div>
 </div>
-
-
