--- a/src/app/components/friend-list/friend-list.component.html
+++ b/src/app/components/friend-list/friend-list.component.html
@@ -11,7 +11,7 @@
           <thead>
           <tr>
             <th>Pseudo</th>
-            <th>Status</th>
+            <th>Statut</th>
             <th>Action</th>
             <th></th>
           </tr>
@@ -52,7 +52,7 @@
           <tfoot>
           <tr>
             <th>Pseudo</th>
-            <th>Status</th>
+            <th>Statut</th>
             <th>Action</th>
             <th></th>
           </tr>
