--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,7 +33,7 @@
     </div>
     <div *ngIf="isLogged" class="avatar online">
       <div class="w-10 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
-        <img src= "assets/images/avatarUserImage.jpg" />
+        <img src= "assets/images/avatarUserImage.jpg" title="{{currentUserPseudo}}"/>
       </div>
     </div>
     <div *ngIf="!isLogged" class="avatar offline">
