gameroom list ok

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,8 @@
           <!-- Elements du menu pour un utilisateur connecté -->
           <li><a href="/">Accueil</a></li>
           <li><a>Profil</a></li>
-          <li><a>Jeux et parties</a></li>
+          <li><a href="/gamerooms">Parties/Salons</a></li>
+          <li><a>Mes GimmiGames</a></li>
           <li><a href="/friends">Mes amis</a></li>
           <li><a>Paramètres</a></li>
           <li><a>A propos</a></li>
