sent invitation works

--- a/src/app/pages/profile/my-game-rooms/my-game-rooms.component.html
+++ b/src/app/pages/profile/my-game-rooms/my-game-rooms.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="flex-1 mx-4 my-4">
     <app-game-room-list  *ngIf="currentSection === 'gameroomsList'" [owner]="currentUserPseudo" ></app-game-room-list>
-<!--    <app-friend-request-management *ngIf="currentSection === 'invitations'" [owner]="currentUserPseudo" ></app-friend-request-management>-->
+   <app-game-room-invitation-management *ngIf="currentSection === 'invitations'" [owner]="currentUserPseudo" ></app-game-room-invitation-management>
     <!-- <app-ranking *ngIf="currentSection === 'ranking'"></app-ranking> -->
   </div>
 </div>
