--- a/src/app/components/game-room-create/game-room-create.component.html
+++ b/src/app/components/game-room-create/game-room-create.component.html
@@ -1,1 +1,43 @@
-<p>game-room-create works!</p>
+<div class="mockup-window border bg-base-300 flex-1 mx-4 my-4">
+  <div class="flex flex-col h-full">
+    <div class="flex items-center justify-between py-4 px-6 bg-base-200">
+      <h2 class="text-xl font-bold">Créer ma room</h2>
+    </div>
+
+    <div class="p-6 bg-base-100 flex-1">
+      <form [formGroup]="gameRoomForm" (ngSubmit)="onSubmit()">
+        <div class="grid grid-cols-2 gap-4">
+          <div>
+            <label class="label">Nom</label>
+            <input type="text" formControlName="roomName" class="input input-bordered" placeholder="Entrez le nom" />
+            <div *ngIf="gameRoomForm.get('roomName')?.invalid && (gameRoomForm.get('roomName')?.dirty || gameRoomForm.get('roomName')?.touched)" class="text-xs text-error">Le nom de la room est requis et doit avoir entre 3 et 30 caractères.</div>
+          </div>
+          <div>
+            <label class="label">Jeu voulu</label>
+            <input type="text" formControlName="currentGame" class="input input-bordered" placeholder="Entrez le nom du jeu" />
+            <div *ngIf="gameRoomForm.get('currentGame')?.invalid && (gameRoomForm.get('currentGame')?.dirty || gameRoomForm.get('currentGame')?.touched)" class="text-xs text-error">Le nom du jeu prevu est requis et doit avoir entre 3 et 15 caractères.</div>
+          </div>
+          <div>
+            <label class="label">Nombre maximum de joueurs</label>
+            <input type="number" formControlName="maxPlayers" class="input input-bordered" placeholder="Entrez le nombre maximum de joueurs" />
+            <div *ngIf="gameRoomForm.get('maxPlayers')?.invalid && (gameRoomForm.get('maxPlayers')?.dirty || gameRoomForm.get('maxPlayers')?.touched)" class="text-xs text-error">Le nombre maximum de joueurs est requis et doit être compris entre 2 et 20.</div>
+          </div>
+        </div>
+        <div class="mt-4">
+          <button type="submit" class="btn btn-primary" [disabled]="gameRoomForm.invalid">Créer</button>
+        </div>
+      </form>
+    </div>
+    <div *ngIf="loadingSpinner" class="spinner-container">
+      <app-spinner></app-spinner>
+    </div>
+  </div>
+
+  <div *ngIf="successMessage">
+    <app-alert type="success" message="{{successMessage}}"></app-alert>
+  </div>
+
+  <div *ngIf="errorMessage">
+    <app-alert type="error" message="{{errorMessage}}"></app-alert>
+  </div>
+</div>
