ranking sample + beginning gameroom page

--- a/src/app/components/game-room-list/game-room-list.component.html
+++ b/src/app/components/game-room-list/game-room-list.component.html
@@ -13,7 +13,7 @@
           <tr>
             <th>Room</th>
             <th>En cours</th>
-            <th>Joueurs</th>
+            <th>Participants</th>
             <th>Action</th>
             <th></th>
           </tr>
@@ -63,7 +63,7 @@
           <tr>
             <th>Room</th>
             <th>En cours</th>
-            <th>Joueurs</th>
+            <th>Participants</th>
             <th>Action</th>
             <th></th>
           </tr>
