--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,9 +12,9 @@
           <!-- Elements du menu pour un utilisateur connecté -->
           <li><a href="/">Accueil</a></li>
           <li><a>Profil</a></li>
-          <li><a href="/gamerooms">Parties/Salons</a></li>
-          <li><a>Mes GimmiGames</a></li>
-          <li><a href="/friends">Mes amis</a></li>
+          <li><a href="/mygamerooms">Parties/Salons</a></li>
+          <li><a href="/gameroom">Mes GimmiGames</a></li> <!--TODO : A retirer. Juste pour tester gameroom ici. On devra le charger avec l'id de la room en parametre d'url-->
+          <li><a href="/myfriends">Mes amis</a></li>
           <li><a>Paramètres</a></li>
           <li><a>A propos</a></li>
           <li><a (click)="logout()">Se déconnecter</a></li>
