--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
-<div [attr.data-theme]="theme">
-  <div class="h-screen flex flex-col">
+<!--<div [attr.data-theme]="theme">-->
+<!--  <div class="h-full flex flex-col">-->
+<!--    <app-header></app-header>-->
+<!--    <div class="mt-header">-->
+<!--      <router-outlet></router-outlet>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+<div [attr.data-theme]="theme" class="h-full"> <!-- Ajouter la classe "h-full" ici -->
+  <div class="h-full flex flex-col"> <!-- Ajouter la classe "h-full" ici -->
     <app-header></app-header>
-    <div class="mt-header">
+    <div class="mt-header flex-grow"> <!-- Remplacer "my-4" par "flex-grow" ici -->
       <router-outlet></router-outlet>
     </div>
   </div>
