--- a/src/app/pages/game-room/game-room.component.html
+++ b/src/app/pages/game-room/game-room.component.html
@@ -39,7 +39,7 @@
           <button class="btn btn-danger btn-sm">Quitter</button>
         </div>
         <h3 class="text-lg font-bold mb-4">Jeu en cours</h3>
-        <h3 class="text-sm font-bold mb-4">1/2 joueurs</h3>
+        <h3 class="text-sm font-bold mb-4 text-red-500">1/2 joueurs</h3>
         <div class="grid grid-cols-2 gap-2">
           <div *ngFor="let player of players" class="flex items-center">
             <p class="text-sm">{{ player.pseudo }}</p>
@@ -49,7 +49,7 @@
 
       <!-- Notifications en temps réel -->
       <div class="p-4 bg-base-200 rounded-xl" style="overflow: auto; max-height: 150px;">
-        <p class="text-lg font-bold">Notifications :</p>
+        <p class="text-lg font-bold">Notifications </p>
         <ul class="mt-2">
           <!-- Insérer ici les notifications du jeu -->
           <li class="text-base">Gagnant : Joueur1</li>
