--- a/src/app/pages/game-room/game-room.component.html
+++ b/src/app/pages/game-room/game-room.component.html
@@ -80,10 +80,14 @@
         <!-- Insérer ici le composant interactif du jeu -->
         <!-- Vous pouvez ajouter du contenu ici, comme une image ou du texte -->
       </div>
-      <div class="bg-base-100 rounded-xl p-4 text-800 relative mt-4 overflow-auto" style="max-height: 150px;">
+      <div class="bg-base-100 rounded-xl p-4 text-800 relative mt-4 overflow-auto " style="max-height: 150px;">
         <!-- Insérer du texte ici -->
-        <p><strong>Vous</strong> : Lance la partie s'il te plait </p>
-        <p><strong>Vous</strong> : Test message du tchat</p>
+          <div class=" chat-bubble chat-bubble-primary mb-2"><p class="text-sm">
+            <strong>Vous</strong> : Lance la partie s'il te plait </p>
+          </div>
+          <div class=" chat-bubble chat-bubble-primary mb-2"><p class="text-sm">
+          <strong>Vous</strong> : Allez, joue !</p>
+          </div>
       </div>
     </div>
   </div>
