--- a/src/app/components/game-room-create/game-room-create.component.html
+++ b/src/app/components/game-room-create/game-room-create.component.html
@@ -22,6 +22,10 @@
             <input type="number" formControlName="maxPlayers" class="input input-bordered" placeholder="Entrez le nombre maximum de participants" />
             <div *ngIf="gameRoomForm.get('maxPlayers')?.invalid && (gameRoomForm.get('maxPlayers')?.dirty || gameRoomForm.get('maxPlayers')?.touched)" class="text-xs text-error">Le nombre maximum de joueurs est requis et doit être compris entre 2 et 20.</div>
           </div>
+          <div>
+            <label class="label">Protocole jeu</label>
+            <input type="file" class="file-input file-input-bordered file-input-primary w-full max-w-xs" />
+          </div>
         </div>
         <div class="mt-4">
           <button type="submit" class="btn btn-primary" [disabled]="gameRoomForm.invalid">Créer</button>
