--- a/src/app/pages/game-room/game-room.component.html
+++ b/src/app/pages/game-room/game-room.component.html
@@ -12,7 +12,7 @@
       <div class="p-4 bg-base-200 rounded-xl">
         <div class="grid grid-cols-2 gap-4">
           <div>
-            <p class="text-lg font-bold">Créateur </p>
+            <p class="text-lg font-bold">Créateur</p>
             <p class="text-lg">Mouss</p>
           </div>
           <div>
@@ -60,10 +60,10 @@
 
       <!-- Tchat -->
       <div class="p-4 bg-base-200 rounded-xl mt-4 flex flex-col" style="height: 200px;">
-        <h3 class="text-lg font-bold mb-4">Tchat </h3>
-        <textarea class="flex-grow bg-base-100 rounded-lg p-2 mb-4" placeholder="Entrez votre message ici..."></textarea>
+        <h3 class="text-lg font-bold mb-4">Tchat</h3>
+        <textarea [(ngModel)]="myChatMessage" class="flex-grow bg-base-100 rounded-lg p-2 mb-4" placeholder="Entrez votre message ici..."></textarea>
         <div class="flex justify-end">
-          <button class="btn btn-primary">Envoyer</button>
+          <button class="btn btn-primary" (click)="sendMessage()">Envoyer</button>
         </div>
       </div>
 
@@ -82,11 +82,10 @@
       </div>
       <div class="bg-base-100 rounded-xl p-4 text-800 relative mt-4 overflow-auto " style="max-height: 150px;">
         <!-- Insérer du texte ici -->
-          <div class=" chat-bubble chat-bubble-primary mb-2"><p class="text-sm">
-            <strong>Vous</strong> : Lance la partie s'il te plait </p>
-          </div>
-          <div class=" chat-bubble chat-bubble-primary mb-2"><p class="text-sm">
-          <strong>Vous</strong> : Allez, joue !</p>
+          <div  *ngFor="let message of chatMessagesByGameRoom[currentGameRoomId]" class=" chat-bubble chat-bubble-primary mb-2">
+            <p class="text-sm">
+              <strong>{{ message.from }}</strong> : {{ message.msg }}
+            </p>
           </div>
       </div>
     </div>
