--- a/src/app/components/game-room-list/game-room-list.component.html
+++ b/src/app/components/game-room-list/game-room-list.component.html
@@ -50,7 +50,7 @@
               </ng-container>
               <ng-template #elseBlock>
                 <!--TODO: ENTER BUTTON REDIRECT TOWARDS GAMEROOM COMPONENT-->
-                <button class="btn btn-primary">Entrer</button>
+                <button class="btn btn-primary" (click)="enterGameroom(gameRoom._id)">Entrer</button>
               </ng-template>
             </td>
             <td>
