--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
           <li><a href="/">Accueil</a></li>
           <li><a>Profil</a></li>
           <li><a href="/mygamerooms">Parties/Salons</a></li>
-          <li><a href="/gameroom">Mes GimmiGames</a></li> <!--TODO : A retirer. Juste pour tester gameroom ici. On devra le charger avec l'id de la room en parametre d'url-->
+          <li><a href="/mygamerooms">Jouer</a></li>
           <li><a href="/myfriends">Mes amis</a></li>
           <li><a>Paramètres</a></li>
           <li><a>A propos</a></li>
