--- a/src/app/pages/game-room/game-room.component.html
+++ b/src/app/pages/game-room/game-room.component.html
@@ -58,35 +58,49 @@
         </ul>
       </div>
 
-      <!-- Tchat -->
+      <!-- Chat -->
       <div class="p-4 bg-base-200 rounded-xl mt-4 flex flex-col" style="height: 200px;">
-        <h3 class="text-lg font-bold mb-4">Tchat</h3>
+        <h3 class="text-lg font-bold mb-4">Chat</h3>
         <textarea [(ngModel)]="myChatMessage" class="flex-grow bg-base-100 rounded-lg p-2 mb-4" placeholder="Entrez votre message ici..."></textarea>
         <div class="flex justify-end">
           <button class="btn btn-primary" (click)="sendMessage()">Envoyer</button>
         </div>
       </div>
-
     </div>
 
     <div class="flex-grow flex flex-col">
-    <!-- Espace interactif du jeu -->
+      <!-- Espace interactif du jeu -->
       <div class="flex-grow bg-base-100 rounded-xl p-4 text-800">
         <!-- En-tête pour afficher le nom du jeu -->
         <div class="flex justify-center">
-          <h2 class="text-lg font-bold">Morpion</h2>
+          <h2 class="text-lg font-bold">{{currentGameName}}</h2>
         </div>
         <div class="divider"></div>
         <!-- Insérer ici le composant interactif du jeu -->
-        <!-- Vous pouvez ajouter du contenu ici, comme une image ou du texte -->
-      </div>
-      <div class="bg-base-100 rounded-xl p-4 text-800 relative mt-4 overflow-auto " style="max-height: 150px;">
-        <!-- Insérer du texte ici -->
-          <div  *ngFor="let message of chatMessagesByGameRoom[currentGameRoomId]" class=" chat-bubble chat-bubble-primary mb-2">
-            <p class="text-sm">
-              <strong>{{ message.from }}</strong> : {{ message.msg }}
-            </p>
+
+        <!-- PAD choix-->
+        <div class="flex items-end justify-start mt-4">
+          <div class="grid grid-cols-3 gap-1">
+            <label *ngFor="let key of sortedMorpionKeys" class="border-2 border-gray-300 bg-white p-4 flex justify-center items-center rounded-md">
+              <input type="radio" name="radio-1" class="radio radio-xs" [checked]="key === selectedCase" [disabled]="getDisabledState(key)" (click)="selectCase(key)" />
+            </label>
           </div>
+        </div>
+
+        <!-- Bouton "Jouer cette case" -->
+        <div class="mt-4 flex justify-start">
+          <button class="btn btn-neutral" [disabled]="selectedCase === null" (click)="jouerCetteCase()">Jouer cette case</button>
+        </div>
+
+      </div>
+
+      <!--Tchat messages -->
+      <div class="bg-base-100 rounded-xl p-4 text-800 relative mt-4 overflow-auto " style="max-height: 150px;">
+        <div  *ngFor="let message of chatMessagesByGameRoom[currentGameRoomId]" class=" chat-bubble chat-bubble-primary mb-2">
+          <p class="text-sm">
+            <strong>{{ message.from }}</strong> : {{ message.msg }}
+          </p>
+        </div>
       </div>
     </div>
   </div>
